# bolomoty

./: .gitignore  Cargo.toml  README.md  install.sh
.github/scripts/: gen_man.rs
.github/workflows/: ci.yml  release.yml
.hooks/: install.sh  pre-commit
src/: clean.rs  cli.rs  consolidate.rs  error.rs  lib.rs  main.rs  pretty.rs
src/api/: fs.rs  mod.rs
src/api/tree_sitter/: mod.rs  py.rs  rs.rs
