[package]
name = "bolomoty"
version = "0.1.0"
edition = "2024"
description = "Parse codebases into dependency DAGs using tree-sitter"
license = "MIT"
repository = "https://github.com/bharxhav/bolomoty"
authors = ["bharxhav"]
default-run = "bolo"

[[bin]]
name = "bolo"
path = "src/main.rs"

[[bin]]
name = "gen-man"
path = ".github/scripts/gen_man.rs"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
colored = "3.1.1"
ignore = "0.4.25"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.25.0"
thiserror = "2.0.18"
tree-sitter = "0.26.5"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
clap_mangen = "0.2"
